# CloudMask

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  inference.py  pyproject.toml  requirements.txt  test.py  train.py
.github/workflows/: codecov.yml  lint.yml  linting.yml  release.yml  test.yml
cloudmask/: cli copy.py  cli.py  testing_pipeline.py  training_pipeline.py
cloudmask/datamodules/: __init__.py  mnist_datamodule.py
cloudmask/litmodules/: __init__.py  mnist_litmodule.py
cloudmask/models/: __init__.py  simple_densenet.py
cloudmask/utils/: __init__.py  decompress_landsat8.py  download_landsat8.py  log_config.py  make_logo.py
configs/: test.yaml  train.yaml
configs/callbacks/: default.yaml
configs/datamodule/: mnist.yaml
configs/debug/: default.yaml  step.yaml
configs/experiment/: example.yaml
configs/hparams_search/: mnist_optuna.yaml
configs/litmodule/: mnist.yaml
configs/logger/: comet.yaml  neptune.yaml  wandb.yaml
configs/model/: simple_densenet.yaml
configs/trainer/: default.yaml
tests/: test_cli.py  test_cloudmask.py  test_download_landsat8.py
util/: download.py  multi_thread_downloader.py
