[tool.poetry]
name = "cloudmask"
version = "0.1.4"
description = "Cloud mask with Landsat 8"
license = "MIT"
authors = ["XavierJiezou <878972272@qq.com>"]
maintainers = []
readme = "README.md"
homepage = "https://github.com/XavierJiezou/CloudMask"
repository = "https://github.com/XavierJiezou/CloudMask"
documentation = "https://github.com/XavierJiezou/CloudMask"
keywords = ["landsat8", "cloud", "mask"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
packages = [{ include = "cloudmask" }]
include = ["CHANGELOG.md"]
exclude = []

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.0"
torchvision = "^0.9.0"
pytorch-lightning = "^1.5.0"
torchmetrics="^0.8.2"
fire = "^0.4.0"
rich = "^12.3.0"
hydra-core = "^1.1.0"
hydra-colorlog = "^1.1.0"
wandb = "^0.12.16"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
pylint = "^2.13.8"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test"

[tool.isort]
profile = "black"
multi_line_output = 3
filter_files = true

[tool.poetry.scripts]
cloudmask = "cloudmask.cli:main"
